# data-pipeline

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.tekton/: data-pipeline-pull-request.yaml  data-pipeline-push.yaml
deploy/: dvo-extractor.yaml
